<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_broker"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_broker" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_calculator" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_more" />

</menu>