<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.map08.houseonpalm.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_broker"
        android:name="com.map08.houseonpalm.ui.broker.BrokerFragment"
        android:label="@string/title_broker"
        tools:layout="@layout/fragment_broker" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.map08.houseonpalm.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_signin"
        android:name="com.map08.houseonpalm.ui.singin.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in" />
</navigation>